--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,7 +26,7 @@
           <% end %>
         </tr>
       </table>
-      <td><%= render 'comment', book: @book %></td>
+      <%= render 'comment', book: @book %>
     </div>
   </div>
 </div>
