--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,24 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows <%= link_to user.followings.count, user_followings_path(user.id) %></th>
+    <th></th>
+  </tr>
+  <tr>
+    <th>followers <%= link_to user.followers.count, user_followers_path(user.id) %></th>
+    <th></th>
+  </tr>
 </table>
-　
+<% unless current_user == user %>
+<div class="form-group">
+  <% if current_user.following?(@user) %>
+    <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: 'btn btn-success' %>
+  <% else %>
+    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: 'btn btn-success' %>
+  <% end %>
+</div>
+<% end %>
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
     <i class="fas fa-user-cog"></i>
