--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <% if user_signed_in? %>
+      <%= render 'searches/search' %>
+    <% else %>
+    <% end %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
