--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -26,6 +26,9 @@
   <% end %>
 </div>
 <% end %>
+<% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+  <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
+<% end %>
 <% if user.name != "guestuser" %>
   <div class='row'>
     <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
