--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -25,6 +25,9 @@
               <td><%= link_to group.name, group_path(group) %></td>
               <td><%= group.introduction %></td>
               <td>
+                <%= group.users.count %>
+              </td>
+              <td>
                 <% if group.owner_id == current_user.id %>
                   <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success" %>
                 <% end %>
