--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -18,11 +18,11 @@
   </tr>
 </table>
 <% unless current_user == user %>
-<div class="form-group">
+<div class="form-group" id="follow_buttons_<%= user.id %>">
   <% if current_user.following?(@user) %>
-    <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: 'btn btn-success' %>
+    <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, remote: true, class: 'btn btn-success' %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: 'btn btn-success' %>
+    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, remote: true, class: 'btn btn-success' %>
   <% end %>
 </div>
 <% end %>
